--- a/development/backend/mcp-configuration-architecture.mdx
+++ b/development/backend/mcp-configuration-architecture.mdx
@@ -82,87 +82,41 @@ The three-tier system addresses this by:
 
 ## Database Schema
 
+The three-tier configuration system uses three main tables:
+
 ### Tier 1: MCP Catalog (`mcpServers`)
 
-The catalog defines the configuration structure for each MCP server type:
-
-**Core Configuration Fields:**
-```sql
--- Template Level (with lock controls)
-template_args: text('template_args')         -- [{value, locked, description}]
-template_env: text('template_env')           -- Fixed environment variables
-template_headers: text('template_headers')   -- Fixed HTTP headers (for HTTP/SSE)
-template_url_query_params: text('template_url_query_params') -- Fixed URL query params (for HTTP/SSE)
-
--- Team Schema (with lock/visibility controls)
-team_args_schema: text('team_args_schema')   -- Schema with lock controls
-team_env_schema: text('team_env_schema')     -- [{name, type, required, default_team_locked, visible_to_users}]
-team_headers_schema: text('team_headers_schema') -- HTTP headers schema (for HTTP/SSE)
-team_url_query_params_schema: text('team_url_query_params_schema') -- URL query params schema (for HTTP/SSE)
-
--- User Schema
-user_args_schema: text('user_args_schema')   -- User-configurable argument schema
-user_env_schema: text('user_env_schema')     -- User-configurable environment schema
-user_headers_schema: text('user_headers_schema') -- User HTTP headers schema (for HTTP/SSE)
-user_url_query_params_schema: text('user_url_query_params_schema') -- User URL query params schema (for HTTP/SSE)
-```
-
-**Transport Configuration:**
-```sql
-transport_type: text('transport_type')       -- 'stdio' | 'http' | 'sse'
-packages: text('packages')                   -- JSON: npm/pip/docker packages (stdio)
-remotes: text('remotes')                     -- JSON: HTTP/SSE endpoints
-```
-
-**Official Registry Tracking Fields:**
-```sql
-official_name: text('official_name')         -- Reverse-DNS name from registry
-synced_from_official_registry: boolean       -- True if synced from registry
-official_registry_server_id: text            -- Registry's server identifier
-official_registry_version_id: text           -- Registry's version identifier
-official_registry_published_at: timestamp    -- Original publication date
-official_registry_updated_at: timestamp      -- Last update in registry
-```
-
-**GitHub Enhancement Fields:**
-```sql
-repository_source: text                      -- 'github' | 'gitlab' | 'bitbucket'
-repository_id: text                          -- Platform-specific repo ID
-repository_subfolder: text                   -- Monorepo subfolder path
-github_account_id: text                      -- For avatar URLs
-github_readme_base64: text                   -- Cached README content
-github_stars: integer                        -- Star count for social proof
-```
+Defines configuration structure for each MCP server type including template-level config, team/user schemas, transport configuration, and registry tracking.
 
 ### Tier 2: Team Installation (`mcpServerInstallations`)
 
-Team installations manage shared configurations:
+Manages shared team configurations including installation name, team args, environment variables, headers, and URL query params.
 
-```sql
-installation_name: text('installation_name') -- Team-friendly name
-team_args: text('team_args')                 -- Team-level arguments (JSON array)
-team_env: text('team_env')                   -- Team environment variables (JSON object)
-team_headers: text('team_headers')           -- Team HTTP headers (JSON object, for HTTP/SSE)
-team_url_query_params: text('team_url_query_params') -- Team URL query params (JSON object, for HTTP/SSE)
-```
+### Per-User Instances (`mcpServerInstances`)
+
+While not strictly a "configuration tier", the instance table enables per-user isolation:
+
+**Key Characteristics**:
+- One instance per user per installation (UNIQUE constraint)
+- Independent status tracking per user
+- CASCADE deletes when installation removed
+- Enables parallel status states (User A online, User B offline)
+
+For complete database schema, see [Database Schema](/development/backend/database/).
+
+For complete instance lifecycle, see [Instance Lifecycle](/development/satellite/instance-lifecycle).
 
 ### Tier 3: User Configuration (`mcpUserConfigurations`)
 
-Individual user configurations:
+Stores individual user configurations including personal args, environment variables, headers, and URL query params.
 
-```sql
-installation_id: text('installation_id')     -- References team installation
-user_id: text('user_id')                     -- User who owns this config
-
-user_args: text('user_args')                 -- User arguments (JSON array)
-user_env: text('user_env')                   -- User environment variables (JSON object)
-user_headers: text('user_headers')           -- User HTTP headers (JSON object, for HTTP/SSE)
-user_url_query_params: text('user_url_query_params') -- User URL query params (JSON object, for HTTP/SSE)
-```
+**For complete database schema details, see [Database Schema](/development/backend/database/).**
 
 ## Configuration Flow
 
 ### Runtime Assembly
+
+**Per-User Instance Isolation**: Configurations are assembled **per user** at runtime. Each team member's instance receives their merged config (template + team + user).
 
 ### Configuration Schema Step
 
